--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_ChangePasswordPopup.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_ChangePasswordPopup.cshtml
@@ -28,9 +28,9 @@
     </modal-body>
     <modal-footer>
         <button class="btn btn-secondary btn-flat" data-dismiss="modal" aria-hidden="true">
-            <span>@T("Common.Close")</span>
+            <span>@T("Common.Cancel")</span>
         </button>
-        <button id="btnChangePassword" type="button" class="btn btn-to-danger btn-primary">
+        <button id="btnChangePassword" type="button" class="btn btn-secondary btn-to-danger">
             <span>@T("Account.ChangePassword")</span>
         </button>
     </modal-footer>
