Improvements to change password popup

--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_ChangePasswordPopup.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_ChangePasswordPopup.cshtml
@@ -3,15 +3,32 @@
 @{
     async Task RenderForm()
     {
-        @*Display all errors line by line instead of just the first one.*@
-        <div asp-validation-summary="All"></div>
-        <div>
-            <form>
-                <editor asp-for="Password"
-                        placeholder="@T("Account.ChangePassword.Fields.NewPassword")"
-                        title="@T("Admin.Customers.Customers.Fields.Password.Hint")" />
-            </form>
-        </div>
+        @if (ViewContext.ViewData.ModelState.ContainsKey(string.Empty))
+        {
+            <div asp-validation-summary="ModelOnly"></div>
+        }
+        <form>
+            <div class="adminContent">
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="Password" />
+                    </div>
+                    <div class="adminData">
+                        <editor asp-for="Password" />
+                        <span asp-validation-for="Password"></span>
+                    </div>
+                </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="ConfirmPassword" />
+                    </div>
+                    <div class="adminData">
+                        <editor asp-for="ConfirmPassword" />
+                        <span asp-validation-for="ConfirmPassword"></span>
+                    </div>
+                </div>
+            </div>
+        </form>
     }
 
     if ((ViewBag.ShowFormOnly as bool?) ?? false)
