--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -181,7 +181,7 @@ $btn-active-border-tint-amount:   10% !default;
 
 // Form Check
 
-$form-check-input-border:               1px solid rgba(#000, .15);
+$form-check-input-border:               1px solid rgba($black, .15);
 $form-check-input-focus-border:         rgba(var(--form-check-checked-bg-rgb), 0.5);
 $form-check-input-focus-box-shadow:     0 0 0 0.2rem rgba(var(--form-check-checked-bg-rgb), 0.25);
 $form-check-transition:                 box-shadow 0.12s ease-in-out;
