Resolves #871 Show the total media file size in dashboard stats

--- a/src/Smartstore.Web/Areas/Admin/Views/Store/StoreDashboardReport.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Store/StoreDashboardReport.cshtml
@@ -13,6 +13,7 @@
         new { Part = "CategoriesCount", Label = T("Admin.Catalog.Categories").Value, Title = T("Admin.Catalog.Categories").Value, Icon = "fa fa-sitemap" },
         new { Part = "ManufacturersCount", Label = T("Admin.Catalog.Manufacturers").Value, Title = T("Admin.Catalog.Manufacturers").Value, Icon = "far fa-building" },
         new { Part = "MediaCount", Label = T("Admin.Catalog.Products.Pictures").Value, Title = T("Admin.Catalog.Products.Pictures").Value, Icon = "far fa-images" },
+        new { Part = "MediaSize", Label = T("Admin.Report.MediaFilesSize").Value, Title = T("Admin.Report.MediaFilesSize").Value, Icon = "far fa-file-lines" },
         new { Part = "CustomersCount", Label = T("Admin.Customers.Customers").Value, Title = T("Admin.Customers.Reports.RegisteredCustomers").Value, Icon = "fa fa-users" },
         new { Part = "OrdersCount", Label = T("Admin.Orders").Value, Title = T("Admin.Orders.Overall").Value, Icon = "fa fa-chart-bar" },
         new
