--- a/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_variables-shared-bootstrap.scss
@@ -219,6 +219,12 @@ $dropdown-bg:                   $white !default;
 $dropdown-border-width:         1px !default;
 
 
+// Placeholders
+
+$placeholder-opacity-max:       .5 !default;
+$placeholder-opacity-min:       .2 !default;
+
+
 
 // Pagination Mini
 // --------------------------------------------------
