--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_accordion.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_accordion.scss
@@ -81,7 +81,7 @@
     .card:first-child,
     .card:first-child .card-header,
     .card:first-child .card-title-link {
-        @include border-left-radius(var(--border-radius-md));
+        @include border-top-radius(var(--border-radius-md));
     }
 
     .card:last-child,
