Theming (admin): Activate .spa-layout only on screen height > 600px (DataGrid is unusable in mobile landscape mode otherwise)

--- a/src/Smartstore.Web/wwwroot/admin/_admin.scss
+++ b/src/Smartstore.Web/wwwroot/admin/_admin.scss
@@ -311,30 +311,33 @@ body {
     }
 }
 
-.spa-layout {
-    height: 100%;
-    overflow: hidden;
-
-    #page {
+@media screen and (min-height: 600px) {
+    .spa-layout {
         height: 100%;
-    }
-
-    .page-main {
-        height: 100%;
-        grid-template-columns: 1fr minmax(380px, 20%);
-        --content-row: var(--content-height);
-    }
-
-    .cph {
-        height: 100%;
-    }
-
-    .spa-stretch {
         overflow: hidden;
-        display: flex;
-        flex-flow: column;
+
+        #page {
+            height: 100%;
+        }
+
+        .page-main {
+            height: 100%;
+            grid-template-columns: 1fr minmax(380px, 20%);
+            --content-row: var(--content-height);
+        }
+
+        .cph {
+            height: 100%;
+        }
+
+        .spa-stretch {
+            overflow: hidden;
+            display: flex;
+            flex-flow: column;
+        }
     }
 }
+
 
 @include media-breakpoint-up(md) {
     .spa-layout.has-left-sidebar .page-main {
