--- a/src/Smartstore.Web/wwwroot/skinning/_summernote.scss
+++ b/src/Smartstore.Web/wwwroot/skinning/_summernote.scss
@@ -25,6 +25,25 @@
 	}
 }
 
+
+//
+// Common
+// --------------------------------------------------------------
+
+.note-btn {
+    --btn-padding-x: 9px;
+}
+
+.note-btn > i,
+.note-btn > svg {
+    //font-size: 16px !important;
+    fill: currentColor;
+}
+
+.note-btn > svg {
+    height: 14px;
+}
+
 .note-editor {
 	border-color: $input-border-color !important;
 	border-radius: $input-border-radius !important;
@@ -70,37 +89,51 @@
             margin-inline-start: 0;
         }
 
+        .note-codeview-keep.active > .fa-expand:before {
+            // Swap icon: expand --> compress
+            content: "\f066";
+        }
+
+        .note-recent-color {
+            display: inline-block;
+            border: 1px solid rgba($black, 0.12);
+            padding-inline: 2px;
+            border-radius: 3px;
+        }
+
+        .note-current-fontsize {
+            display: inline-block;
+            width: 16px;
+        }
+
 		.note-para > .btn-group:last-child .dropdown-menu.show {
 			// Fix: the para popover button groups should not wrap
 			display: flex !important;
 		}
 
-		.dropdown-style > .dropdown-item > * {
-			// Fix: Summernote does not remove the BS4 bottom margin of para style dropdown items
-			margin-bottom: 0;
-		}
-
 		.note-font > .btn-group:first-child > .btn {
 			// Fix: the fontsize button width should not change (toolbar flickers)
 			padding-inline: 0.5rem;
-			min-width: 120px;
-            justify-content: center;
+			width: 112px;
+            max-width: 112px;
+            justify-content: space-between;
+            font-weight: 400;
+
+            > .note-current-fontname {
+                @include text-truncate;
+            }
 		}
 
 		.scrollable-menu {
+            --scrollbar-track-color: #fff;
+            --scrollbar-track-hover-color: #fff;
 			height: auto;
 			max-height: 340px;
-			width: 360px;
+			min-width: 280px;
 			overflow-x: hidden;
-			padding: 0 !important
 		}
 
 		.btn-group-cssclass .dropdown-menu {
-			&.show {
-				display: flex;
-				flex-direction: column;
-			}
-
 			.dropdown-item {
 				position: relative;
 
@@ -122,6 +155,10 @@
 	}
 
 	.note-editable {
+        a {
+            text-decoration: underline;
+        }
+
 		table:not(.table-bordered):not([border]),
 		table:not(.table-bordered)[border='0'] {
 			border-collapse: collapse;
@@ -131,4 +168,19 @@
 			}
 		}
 	}
+
+	.note-dropdown-menu > .dropdown-item > * {
+		// Overwrite all reboot margins in Summernote dropdown items
+		margin-bottom: 0;
+	}
+
+    .dropdown-cssclass > .dropdown-item {
+        > .d-block {
+            width: 100%;
+        }
+    }
+
+    .dropdown-fontsize {
+        min-width: 92px;
+    }
 }
