--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Finance.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Finance.cshtml
@@ -183,7 +183,7 @@
                         </div>
                         <div class="adminData">
                             <setting-editor asp-for="TaxSettings.ShippingTaxClassId">
-                                <select asp-for="TaxSettings.ShippingTaxClassId" asp-items="ViewBag.ShippingTaxCategories" asp-placeholder="@T("Common.PleaseSelect")"></select>
+                                <select asp-for="TaxSettings.ShippingTaxClassId" asp-items="ViewBag.ShippingTaxCategories"></select>
                             </setting-editor>
                             <span asp-validation-for="TaxSettings.ShippingTaxClassId"></span>
                         </div>
@@ -214,7 +214,7 @@
                         </div>
                         <div class="adminData">
                             <setting-editor asp-for="TaxSettings.PaymentMethodAdditionalFeeTaxClassId">
-                                <select asp-for="TaxSettings.PaymentMethodAdditionalFeeTaxClassId" asp-items="ViewBag.PaymentMethodAdditionalFeeTaxCategories" asp-placeholder="@T("Common.PleaseSelect")"></select>
+                                <select asp-for="TaxSettings.PaymentMethodAdditionalFeeTaxClassId" asp-items="ViewBag.PaymentMethodAdditionalFeeTaxCategories"></select>
                             </setting-editor>
                             <span asp-validation-for="TaxSettings.PaymentMethodAdditionalFeeTaxClassId"></span>
                         </div>
