Fixed another validation issue of FinanceSettingsModel

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Finance.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Finance.cshtml
@@ -241,9 +241,7 @@
                         </div>
                         <div class="adminData">
                             <setting-editor asp-for="TaxSettings.EuVatShopCountryId">
-                                <editor asp-for="TaxSettings.EuVatShopCountryId"
-                                        asp-template="Countries"
-                                        asp-additional-viewdata='new { placeholder = T("Admin.Address.SelectCountry").Value }' />
+                                <editor asp-for="TaxSettings.EuVatShopCountryId" asp-template="Countries" />
                             </setting-editor>
                             <span asp-validation-for="TaxSettings.EuVatShopCountryId"></span>
                         </div>
