Added quantity information to cart itmes on confirm order page

--- a/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/CartItems.cshtml
@@ -79,6 +79,11 @@
                     @* Price *@
                     <div class="cart-item-price-group cart-item-group">
                         <partial name="CartItem.Price" model="item.Price">
+
+                        @* Quantity *@
+                            <div sm-if="!Model.IsEditable" class="cart-item-qty pd-muted">
+                            <span>@T("Order.Product(s).Quantity"):</span> <span>@item.EnteredQuantity @(item.EnteredQuantity > 1 ? item.QuantityUnitNamePlural : item.QuantityUnitName)</span>
+                        </div>
                     </div>
 
                     @* Attributes & Variants *@
