--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
     var widgetZone = ViewData["widgetZone"] as string;
-    var controller = ViewContext.RouteData.Values["controller"].ToString();
-    var isAdminController = controller.Contains("Admin", StringComparison.OrdinalIgnoreCase);
 }
 
-@if (isAdminController && "sidebar_left".Equals(widgetZone))
+@if (WorkContext.IsAdminArea && "sidebar_left".Equals(widgetZone))
 {
     // Ignore, because it messes up the admin layout completely.
 }
